--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,84 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #282c34;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.sidemenu {
+  width: 250px;
+  padding: 8px;
+  background-color: #202123;
+}
+.chatbot {
+  flex: 1;
+  width: 100%;
+  background-color: #343541;
+  position: relative;
+}
+.side-menu-button {
+  border: 1px solid white;
+  border-radius: 10px;
+  padding: 12px;
+  text-align: left;
+  transition: ease 0.25s all;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.side-menu-button:hover {
+  background-color: rgb(255, 255, 255, 0.1); /* 0.1=10percent opacity */
+}
+.side-menu-button span {
+  padding-left: 6px;
+  padding-right: 12px;
+}
+.chat-input-holder {
+  padding: 24px;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+.chat-input-textarea {
+  background-color: #40414f;
+  border: none;
+  padding: 12px;
+  color: white;
+  width: 90%;
+  border-radius: 5px;
+
+  margin: 10px;
+  outline: none;
+  box-shadow: 0 0 8px 0 rgb(0, 0, 0, 0.25);
+  bottom: 0;
+}
+.chat-log {
+  padding: 25px;
+
+  text-align: left;
+}
+.chat-message {
+  background-color: rgb(255, 255, 255, 0.1);
+}
+.chat-message-centre {
+  max-width: 480px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 12px;
+  display: flex;
+  padding-left: 24px;
+  padding-right: 24px;
+}
+.avatar {
+  background: white;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+}
+.message {
+  padding-left: 15px;
+  text-align: center;
 }
