--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,17 +6,20 @@
   bottom: 0;
   left: 0;
   right: 0;
+  height: 100%;
   background-color: #282c34;
   color: white;
 }
 .sidemenu {
   width: 250px;
   padding: 8px;
+  height: 100%;
   background-color: #202123;
 }
 .chatbot {
   flex: 1;
   width: 100%;
+  height: 100%;
   background-color: #343541;
   position: relative;
 }
@@ -48,6 +51,7 @@
   padding: 12px;
   color: white;
   width: 90%;
+
   border-radius: 5px;
 
   margin: 10px;
@@ -60,11 +64,11 @@
 
   text-align: left;
 }
-.chat-message {
-  background-color: rgb(255, 255, 255, 0.1);
+.chatgpt {
+  background-color: #444654;
 }
 .chat-message-centre {
-  max-width: 480px;
+  max-width: 640px;
   margin-left: auto;
   margin-right: auto;
   padding: 12px;
@@ -77,6 +81,9 @@
   border-radius: 50%;
   width: 40px;
   height: 40px;
+}
+.avatar.chatgpt {
+  background: #10a37f;
 }
 .message {
   padding-left: 15px;
